[package]
name = "mmatamm-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
float_eq = "1.0.1"
rand = "0.8.5"
thiserror = "1.0.61"
tokio = { version = "1.38.0", optional = false, features = ["full", "macros", "rt"] }
# TODO tokio should be optional

# [features]
# tests = ["dep:tokio"]
