[package]
name = "mmatamm-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
flexi_logger = "0.28.5"
float_eq = "1.0.1"
futures = "0.3.30"
rand = "0.8.5"
thiserror = "1.0.61"
tokio = { version = "1.38.0", optional = false, features = ["full", "macros", "rt"] }
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4"] }
# TODO tokio should be optional

# [features]
# tests = ["dep:tokio"]
